[gd_scene load_steps=16 format=3 uid="uid://u5h3tax0kfr5"]

[ext_resource type="Script" path="res://scripts/second_scene.gd" id="1_0ne4j"]
[ext_resource type="Texture2D" uid="uid://rewbdsmx1a27" path="res://art/objects/objects.png" id="2_frvcs"]
[ext_resource type="Texture2D" uid="uid://fwudka3pqm7m" path="res://art/tilesets/grass.png" id="3_h2hus"]
[ext_resource type="Texture2D" uid="uid://dsmclbarflyvv" path="res://art/tilesets/plains.png" id="4_p6ipf"]
[ext_resource type="Texture2D" uid="uid://cyb08mvge7wnm" path="res://art/tilesets/fences.png" id="5_y51t5"]
[ext_resource type="Texture2D" uid="uid://dp6ejjleocr4p" path="res://art/tilesets/decor_16x16.png" id="6_jj0tb"]
[ext_resource type="PackedScene" uid="uid://cil03ohrmiway" path="res://scenes/player.tscn" id="7_tq2uw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6qe7q"]
texture = ExtResource("2_frvcs")
0:1/0 = 0
0:1/0/y_sort_origin = 4
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.8125, 1.5, 6.5625, 2.125, 5.1875, 5.875, 0.8125, 8, -4.9375, 5.75)
0:0/0 = 0
0:0/0/y_sort_origin = 2
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.4375, 0.625, 6.1875, 0.875, 5.9375, 2.75, -0.1875, 5.125, -6.1875, 2.625)
5:0/0 = 0
5:0/0/y_sort_origin = 4
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.8125, 1.5, 6.5625, 2.125, 6.5625, 5.5, -6.6875, 6.25)
10:0/size_in_atlas = Vector2i(2, 1)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.0625, -6.75, 15.1875, -7, 15.0625, 3, 14.0625, 3.875, 14.0625, 6.625, 10.6875, 6.75, 10.4375, 4.625, -11.0625, 4.5, -11.0625, 6.875, -14.6875, 6.75, -15.1875, 3.75, -15.4375, -2.625, -15.4375, -7.125, -11.0625, -6.75, -4.0625, -6.875)
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.3125, -15.75, 8, -2.875, 7.6875, 11.25, 6.3125, 13.75, 3.3125, 13.875, 2.6875, 12.125, -2.5625, 12.125, -3.1875, 13.625, -6.3125, 13.625, -7.6875, 11.75, -8, -6.75, -6.8125, -15.625)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 7
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.625, 11.5, -14.625, 3.25, 13.125, 2.5, 13.875, 8.5, 8.625, 14, -0.375, 14.25, -8.125, 15.5)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 13
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.375, 14.75, -8, 8, 8, 6.25, 8.375, 15.25, 4.875, 19.25, 0.125, 21, -5.375, 20.25)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 4
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10.4375, 1.875, 10.8125, 1.625, 8.8125, 9, -6.1875, 9.625, -10.6875, 5.75)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 12
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.9375, 16.125, 11.4375, 17.875, 11.3125, 21.875, 9.0625, 26, 4.3125, 25.625, 2.4375, 24.125, 1.3125, 20.875, 0.3125, 24, -1.5625, 25.875, -5.9375, 25.625, -7.3125, 22.875, -11.6875, 22.875, -10.9375, 17.625, -11.3125, 15.625, -8.9375, 12.875, 6.1875, 12.5, 7.5625, 14)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fyhj7"]
texture = ExtResource("3_h2hus")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_je1h7"]
texture = ExtResource("4_p6ipf")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 6.625, 3.1875, 6.5, -0.0625, 6.875, -2.8125, 4.375, -5.0625, 1.875, -4.8125, -8)
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4.75, 8, 8, 3.5625, 8, 0.4375, 8, -4.0625, 8, -4.6875, 5, 0.6875, -3.75)
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, 3.5625, 8, 0.4375, 8, -4.0625, 8, -5.6875, 4.375, -4.8125, -8)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4x0pl"]
texture = ExtResource("5_y51t5")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.6875, -6.875, 5.4375, -4.375, 5.0625, -1.375, 4.8125, 1.5, 4.1875, 4.125, 2.5625, 8, -1.0625, 8, -4.6875, 3.625, -4.5625, -1.875, -4.9375, -4.5, -3.0625, -6.875)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.6875, -6.875, 5.4375, -4.375, 8, -1.625, 8, 3.125, 4.1875, 4.125, 2.5625, 8, -1.0625, 8, -4.6875, 3.625, -4.5625, -1.875, -4.9375, -4.5, -3.0625, -6.875)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.6875, -6.875, 5.4375, -4.375, 8, -1.25, 8, 3.25, 4.1875, 4.125, 2.5625, 8, -1.0625, 8, -3.6875, 4.75, -3.6875, 0.75, -4.9375, -4.5, -3.0625, -6.875)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.6875, -6.875, 5.4375, -4.375, 8, -1.625, 8, 3.125, 4.1875, 4.125, 2.5625, 8, -1.0625, 8, -4.6875, 3.625, -8, 3.25, -8, -1.625, -4.5625, -1.875, -4.9375, -4.5, -3.0625, -6.875)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.6875, -6.875, 5.4375, -4.375, 5.6875, -1, 4.9375, 2, 4.1875, 4.125, 2.5625, 8, -1.0625, 8, -4.6875, 3.625, -8, 3.25, -8, -1.375, -4.5625, -1.875, -4.9375, -4.5, -3.0625, -6.875)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5lsiu"]
texture = ExtResource("6_jj0tb")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/y_sort_origin = -8
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/y_sort_origin = -8
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/y_sort_origin = -8
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/y_sort_origin = -8
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_jxsjt"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6qe7q")
sources/1 = SubResource("TileSetAtlasSource_fyhj7")
sources/2 = SubResource("TileSetAtlasSource_je1h7")
sources/3 = SubResource("TileSetAtlasSource_4x0pl")
sources/4 = SubResource("TileSetAtlasSource_5lsiu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6mk1"]
size = Vector2(39, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iom2h"]
size = Vector2(44, 38)

[node name="second_scene" type="Node2D"]
script = ExtResource("1_0ne4j")

[node name="second_scene" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(1, 2)
rotation = -0.000293966
tile_set = SubResource("TileSet_jxsjt")
format = 2
layer_0/name = "Layer1"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 4, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 65570, 1, 0, 131106, 1, 0, 196642, 1, 0, 262178, 65538, 0, 327714, 327682, 1, 393250, 262146, 0, 458786, 196610, 2, 524322, 1, 0, 655394, 1, 0, 655393, 196612, 0, 655392, 1, 0, 655391, 1, 0, 655390, 1, 0, 655389, 1, 0, 655388, 1, 0, 655387, 1, 0, 655386, 196610, 2, 655385, 131074, 2, 655384, 131074, 2, 655383, 131074, 2, 655382, 131074, 2, 655381, 131074, 2, 655380, 131074, 2, 655379, 65538, 2, 655378, 1, 0, 589842, 131074, 2, 589839, 131074, 2, 589838, 131074, 2, 589837, 131074, 2, 589836, 65538, 2, 589835, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 589829, 1, 0, 589828, 1, 0, 589827, 196612, 0, 589826, 1, 0, 589825, 1, 0, 589824, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 196612, 0, 655375, 1, 0, 655376, 1, 0, 524288, 1, 0, 458752, 1, 0, 393216, 1, 0, 327680, 131074, 2, 327681, 327682, 0, 262145, 262146, 1, 196609, 196610, 0, 131073, 1, 0, 131072, 1, 0, 65536, 1, 0, 262144, 131074, 1, 196608, 131074, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 65573, 1, 0, 131109, 196612, 0, 65572, 1, 0, 65571, 1, 0, 131107, 1, 0, 131108, 1, 0, 196644, 1, 0, 196645, 1, 0, 262181, 131074, 0, 327717, 131074, 1, 393253, 131074, 2, 458789, 1, 0, 524325, 196612, 0, 589861, 1, 0, 589860, 1, 0, 655396, 1, 0, 655395, 1, 0, 655397, 1, 0, 327684, 262146, 1, 262148, 196610, 0, 196612, 1, 0, 131076, 1, 0, 65540, 1, 0, 65539, 1, 0, 65537, 1, 0, 196610, 131076, 0, 262146, 131074, 0, 327682, 131074, 1, 393218, 131074, 2, 393217, 65538, 2, 458753, 1, 0, 524289, 1, 0, 524290, 1, 0, 458754, 4, 0, 393219, 327682, 0, 327683, 131074, 1, 262147, 131074, 0, 196611, 1, 0, 131075, 1, 0, 393220, 131074, 1, 458756, 131074, 2, 524292, 1, 0, 524291, 1, 0, 524293, 65540, 0, 458757, 131074, 2, 393221, 131074, 1, 327685, 131074, 0, 262149, 196612, 0, 131077, 1, 0, 65541, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 131074, 0, 393222, 131074, 1, 458758, 327682, 0, 524294, 65538, 2, 524295, 131074, 2, 458759, 131074, 1, 327687, 131074, 0, 262151, 131076, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 65544, 1, 0, 262152, 1, 0, 327688, 196610, 0, 393224, 262146, 1, 458760, 131074, 1, 524296, 131074, 2, 524297, 131074, 2, 458761, 131074, 1, 393225, 131074, 0, 327689, 1, 0, 65545, 1, 0, 65546, 1, 0, 262154, 1, 0, 393226, 131074, 0, 458762, 131074, 1, 524298, 131074, 2, 524299, 131074, 2, 458763, 131074, 1, 393227, 131074, 0, 65547, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 131074, 0, 458764, 131074, 1, 524301, 131074, 1, 458765, 262146, 1, 393229, 196610, 0, 327693, 1, 0, 262157, 1, 0, 196621, 1, 0, 131085, 4, 0, 65549, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 458766, 131074, 0, 524302, 131074, 1, 524303, 131074, 1, 131087, 1, 0, 65551, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 524305, 131074, 1, 458769, 131074, 0, 393233, 1, 0, 262161, 1, 0, 196625, 1, 0, 131089, 1, 0, 65553, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 458770, 131074, 0, 524306, 131074, 1, 524307, 262146, 1, 458771, 196610, 0, 196627, 1, 0, 131091, 1, 0, 65555, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 1, 0, 458772, 131076, 0, 524308, 131074, 0, 589844, 131074, 1, 589843, 327682, 0, 589845, 131074, 1, 524309, 131074, 0, 327701, 1, 0, 262165, 1, 0, 196629, 1, 0, 131093, 1, 0, 65557, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 524310, 131074, 0, 589846, 131074, 1, 589847, 131074, 1, 524311, 131074, 0, 262167, 1, 0, 196631, 1, 0, 131095, 1, 0, 65559, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 1, 0, 393240, 196612, 0, 524312, 131074, 0, 589848, 131074, 1, 589849, 131074, 1, 524313, 327682, 1, 458777, 65538, 0, 393241, 1, 0, 327705, 1, 0, 262169, 1, 0, 196633, 1, 0, 131097, 1, 0, 65561, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 458778, 327682, 1, 524314, 131074, 1, 589850, 262146, 0, 589851, 196610, 2, 524315, 262146, 0, 458779, 131074, 1, 393243, 131074, 0, 327707, 1, 0, 262171, 1, 0, 196635, 1, 0, 131099, 1, 0, 65563, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 131074, 0, 458780, 131074, 1, 524316, 131074, 2, 589852, 1, 0, 589853, 1, 0, 524317, 131074, 2, 458781, 131074, 1, 393245, 131074, 0, 327709, 196612, 0, 262173, 1, 0, 196637, 1, 0, 131101, 1, 0, 65565, 1, 0, 65566, 1, 0, 131102, 1, 0, 196638, 1, 0, 262174, 1, 0, 327710, 1, 0, 393246, 131074, 0, 458782, 131074, 1, 524318, 131074, 2, 589854, 1, 0, 524319, 196610, 2, 458783, 262146, 0, 393247, 327682, 1, 327711, 65538, 0, 262175, 1, 0, 196639, 1, 0, 131103, 196612, 0, 65567, 1, 0, 65568, 1, 0, 131104, 1, 0, 196640, 1, 0, 262176, 1, 0, 327712, 131074, 0, 458784, 131074, 2, 524320, 196612, 0, 524321, 1, 0, 458785, 131074, 2, 393249, 131074, 1, 327713, 131074, 0, 262177, 196612, 0, 131105, 1, 0, 65569, 1, 0, 327715, 131074, 1, 262179, 131074, 0, 196643, 1, 0, 262180, 131074, 0, 327716, 131074, 1, 393252, 131074, 2, 393251, 131074, 2, 458787, 1, 0, 524323, 1, 0, 524324, 1, 0, 458788, 196612, 0, 524300, 327682, 0, 458755, 65538, 2, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720896, 1, 0, 720897, 4, 0, 720898, 4, 0, 720904, 196612, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 65540, 0, 720913, 1, 0, 720914, 1, 0, 720915, 196612, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 196612, 0, 720920, 1, 0, 720921, 1, 0, 720922, 196612, 0, 720923, 1, 0, 720924, 1, 0, 720925, 1, 0, 720926, 1, 0, 720927, 1, 0, 720928, 1, 0, 720929, 1, 0, 720930, 196612, 0, 720931, 1, 0, 720932, 1, 0, 720933, 1, 0, 262153, 1, 0, 196613, 1, 0, 65538, 1, 0, 131074, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 4, 0, 196623, 1, 0, 262159, 1, 0, 327697, 1, 0, 655377, 1, 0, 458776, 1, 0, 327706, 1, 0, 196641, 1, 0, 589840, 131074, 2, 589841, 131074, 2, 524304, 131074, 1, 458768, 131074, 0, 393242, 65538, 0, 393223, 131074, 1, 393248, 131074, 1, 393237, 1, 0, 458767, 131074, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 327702, 1, 0, 393238, 1, 0, 393239, 1, 0, 327703, 1, 0, 393232, 131076, 0, 131081, 1, 0, 131080, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 262155, 1, 0, 131082, 1, 0, 131083, 1, 0, 327691, 1, 0, 327690, 131076, 0, 393231, 1, 0, 196619, 1, 0, 327695, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 458773, 1, 0, 458774, 196612, 0, 458775, 1, 0)
layer_1/name = "Tree Layer"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(655360, 0, 5, 589826, 0, 5, 458752, 0, 5, 655365, 0, 5, 589833, 0, 5, 655372, 0, 5, 589841, 0, 5, 655384, 0, 5, 655397, 0, 5, 589858, 0, 5, 458788, 0, 5, 589853, 0, 5, 589855, 655360, 7, 720928, 655360, 7, 720923, 655360, 7, 720916, 655360, 7, 655375, 655360, 7, 589831, 655360, 7, 524292, 655360, 7, 720910, 393216, 7, 655367, 393216, 7, 720899, 393216, 7, 720918, 393216, 7, 720925, 393216, 7, 655378, 524288, 6, 655370, 524288, 6, 655376, 524288, 6, 655387, 524288, 6, 589856, 524288, 6, 655395, 524288, 6, 655391, 524288, 6, 1, 0, 5, 5, 0, 5, 131109, 0, 5, 65571, 0, 5, 65569, 0, 5, 31, 0, 5, -65507, 0, 5, 65565, 393216, 7, 196642, 393216, 7, 37, 655360, 7, 393232, 655360, 7, -65523, 0, 5, 65550, 0, 5, 65545, 0, 5, 16, 0, 5, -65518, 0, 5, 19, 0, 5, -65515, 0, 5, 23, 0, 5, -65511, 0, 5, 27, 0, 5, 65561, 0, 5, 131093, 0, 5, 131089, 0, 5, 131083, 0, 5, 262153, 0, 5, 262156, 0, 5, 262159, 0, 5, 262163, 0, 5, 196631, 0, 5, 196635, 0, 5, 262174, 0, 5, 262176, 655360, 7, 196633, 524288, 6, 262172, 524288, 6, 262165, 524288, 6, 262161, 524288, 6, -65525, 524288, 6, 196615, 655360, 7, 393240, 655360, 7, 196638, 655360, 7, 327706, 393216, 7, 262151, 393216, 7, 393235, 393216, 7, 393238, 393216, 7, 458772, 655360, 7, 327704, 393216, 7, 196613, 393216, 7, 65536, 393216, 7, 131073, 393216, 7, 196611, 655360, 7, 65539, 524288, 6, 65543, 524288, 6, 7, 393216, 7, 720913, 0, 1, 720905, 0, 1, 720929, 0, 1, 524321, 0, 1, 131104, 0, 1, 131078, 0, 1, 131087, 0, 1, 393234, 0, 1, 262166, 0, 1, 65538, 0, 1, 458754, 0, 1)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array()
layer_3/name = "path"
layer_3/y_sort_enabled = true
layer_3/tile_data = PackedInt32Array(327682, 4, 4, 589838, 4, 4, 393222, 65540, 4, 458767, 65540, 4, 589846, 4, 4, 589843, 131076, 4, 458763, 196612, 4, 393221, 196612, 4, 327715, 196612, 4, 327716, 196612, 4, 524314, 4, 4, 458783, 65540, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1, 2)
rotation = -0.000293966

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-5.96046e-08, -2.38419e-07)
rotation = 0.000293966
polygon = PackedVector2Array(5.96046e-08, 2.38419e-07, 47, 2.38419e-07, 608, 1, 609, 68, 651, 68, 655, 106, 610, 107, 611, 189, 89, 192, 4, 192, -2, 103, -52, 100, -58, 55, -6, 52, -1, 52, -1, 4, -29, 23, -67, 41, -70, 78, -73, 118, -48, 127, -28, 222, 55, 241, 162, 237, 414, 235, 643, 229, 657, 159, 679, 113, 683, 39, 650, 1, 616, -22, 551, -31, 319, -26, 247, -30, 170, -31, 131, -31, -3, -2, -1, 3)

[node name="player" parent="." instance=ExtResource("7_tq2uw")]
position = Vector2(18, 82)

[node name="transition_to_startscene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="transition_to_startscene"]
position = Vector2(-13, 80)
shape = SubResource("RectangleShape2D_f6mk1")

[node name="transition_to_third_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="transition_to_third_scene"]
position = Vector2(626, 90)
shape = SubResource("RectangleShape2D_iom2h")

[connection signal="body_entered" from="transition_to_startscene" to="." method="_on_transition_to_startscene_body_entered"]
[connection signal="body_exited" from="transition_to_startscene" to="." method="_on_transition_to_startscene_body_exited"]
[connection signal="body_entered" from="transition_to_third_scene" to="." method="_on_transition_to_third_scene_body_entered"]
[connection signal="body_exited" from="transition_to_third_scene" to="." method="_on_transition_to_third_scene_body_exited"]
